# vaultex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  VAULTEX_DESIGN.md
crates/vaultex-crypto/: Cargo.toml
crates/vaultex-crypto/src/: aes_gcm.rs  auth.rs  double_ratchet.rs  errors.rs  group.rs  identity.rs  lib.rs  media.rs  message_payload.rs  padding.rs  prekeys.rs  safety_number.rs  sealed_sender.rs  security.rs  x3dh.rs
crates/vaultex-crypto/tests/: e2e_message_flow.rs  security_audit_tests.rs
docs/: protocol-spec.md
extracted/server-middleware/: auth.rs
