# Standalone workspace for the public open-core mirror. The upstream private
# monorepo uses a richer workspace with the desktop, server, transport, and
# FFI crates — this mirror only ships vaultex-crypto.
[workspace]
members = ["crates/vaultex-crypto"]
resolver = "2"

[workspace.package]
version = "0.10.7"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VaultexCoder/vaultex"

[workspace.dependencies]
sodiumoxide = "0.2"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"
proptest = "1"
