[package]
name = "vaultex-crypto"
version = "0.10.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VaultexCoder/vaultex"
description = "Zero-knowledge end-to-end encryption primitives for VAULTEX (X3DH + Double Ratchet + sealed sender), built on libsodium"
keywords = ["cryptography", "x3dh", "double-ratchet", "signal-protocol", "e2ee"]
categories = ["cryptography"]
readme = "../../README.md"

[dependencies]
sodiumoxide   = "0.2"
libsodium-sys = "0.2"
rand          = "0.8"
zeroize       = { version = "1", features = ["derive"] }
hkdf          = "0.12"
sha2          = "0.10"
hmac          = "0.12"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
hex           = "0.4"
thiserror     = "1"

[dev-dependencies]
proptest = "1"
