[package]
name = "vaultex-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zero-knowledge E2E encryption primitives for VAULTEX"

[dependencies]
sodiumoxide = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
libsodium-sys = "0.2"

[dev-dependencies]
proptest = { workspace = true }
